-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: hs25
-
Component/s: hotspot
-
b25
-
b26
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8011820 | 8 | Coleen Phillimore | P2 | Closed | Fixed | b85 |
;; Using jvm: "/export/local/common/jdk/baseline/solaris-i586/jre/lib/i386/client/libjvm.so"
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/jprt/T/P1/170135.amurillo/s/src/share/vm/runtime/mutex.cpp:1318), pid=22995, tid=2
# fatal error: acquiring lock Metaspace allocation lock/5 out of order with lock SystemDictionary_lock/4 -- possible deadlock
#
# JRE version: Java(TM) SE Runtime Environment (8.0-b82) (build 1.8.0-ea-fastdebug-b82)
# Java VM: Java HotSpot(TM) Client VM (25.0-b24-internal-201303231701.amurillo.hs25-b24-snapshot-fastdebug compiled mode, sharing solaris-x86 )
# Core dump written. Default location: /export/local/aurora/sandbox/results/ResultDir/oome/core or core.22995
#
# If you would like to submit a bug report, please visit:
# http://bugreport.sun.com/bugreport/crash.jsp
#
Stack: [0xfce9f000,0xfceef000], sp=0xfceecfc0, free space=311k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x159989d] void VMError::report(outputStream*)+0x92d;; __1cHVMErrorGreport6MpnMoutputStream__v_+0x92d
V [libjvm.so+0x159ab26] void VMError::report_and_die()+0x57a;; __1cHVMErrorOreport_and_die6M_v_+0x57a
V [libjvm.so+0x78c4db] void report_fatal(const char*,int,const char*)+0x56f;; __1cMreport_fatal6Fpkci1_v_+0x56f
V [libjvm.so+0x117320d] void Monitor::lock_without_safepoint_check()+0x4fd;; __1cHMonitorbClock_without_safepoint_check6M_v_+0x4fd
V [libjvm.so+0x65196a] void ClassLoaderData::remove_class(Klass*)+0x3a;; __1cPClassLoaderDataMremove_class6MpnFKlass__v_+0x3a
V [libjvm.so+0x1007771] void Klass::remove_unshareable_info()+0x29;; __1cFKlassXremove_unshareable_info6M_v_+0x29
V [libjvm.so+0xa09b17] void InstanceKlass::remove_unshareable_info()+0x17;; __1cNInstanceKlassXremove_unshareable_info6M_v_+0x17
V [libjvm.so+0x1425122] void SystemDictionary::clean_up_shared_class(instanceKlassHandle,Handle,Thread*)+0x1a2;; __1cQSystemDictionaryVclean_up_shared_class6FnTinstanceKlassHandle_nGHandle_pnGThread__v_+0x1a2
V [libjvm.so+0x14211d8] Klass*SystemDictionary::resolve_instance_class_or_null(Symbol*,Handle,Handle,Thread*)+0x10ac;; __1cQSystemDictionarybEresolve_instance_class_or_null6FpnGSymbol_nGHandle_3pnGThread__pnFKlass__+0x10ac
V [libjvm.so+0x141b17e] Klass*SystemDictionary::resolve_or_fail(Symbol*,Handle,Handle,bool,Thread*)+0x29e;; __1cQSystemDictionaryPresolve_or_fail6FpnGSymbol_nGHandle_3bpnGThread__pnFKlass__+0x29e
V [libjvm.so+0x7667c4] Klass*ConstantPool::klass_at_impl(constantPoolHandle,int,Thread*)+0x350;; __1cMConstantPoolNklass_at_impl6FnSconstantPoolHandle_ipnGThread__pnFKlass__+0x350
V [libjvm.so+0x110487a] int Method::fast_exception_handler_bci_for(methodHandle,KlassHandle,int,Thread*)+0x2d2;; __1cGMethodbEfast_exception_handler_bci_for6FnMmethodHandle_nLKlassHandle_ipnGThread__i_+0x2d2
V [libjvm.so+0x13651e1] unsigned char*SharedRuntime::compute_compiled_exc_handler(nmethod*,unsigned char*,Handle&,bool,bool)+0x5a9;; __1cNSharedRuntimebCcompute_compiled_exc_handler6FpnHnmethod_pCrnGHandle_bb_3_+0x5a9
V [libjvm.so+0x52d79f] unsigned char*exception_handler_for_pc_helper(JavaThread*,oopDesc*,unsigned char*,nmethod*&)+0x152b;; __1cbFexception_handler_for_pc_helper6FpnKJavaThread_pnHoopDesc_pCrpnHnmethod__4_+0x152b
V [libjvm.so+0x52de3c] unsigned char*Runtime1::exception_handler_for_pc(JavaThread*)+0x78;; __1cIRuntime1Yexception_handler_for_pc6FpnKJavaThread__pC_+0x78
v ~RuntimeStub::handle_exception_from_callee Runtime1 stub
J java.lang.Class.newInstance0()Ljava/lang/Object;
V [libjvm.so+0xb2d286] void JavaCalls::call_helper(JavaValue*,methodHandle*,JavaCallArguments*,Thread*)+0x12e6;; __1cJJavaCallsLcall_helper6FpnJJavaValue_pnMmethodHandle_pnRJavaCallArguments_pnGThread__v_+0x12e6
V [libjvm.so+0x121d138] void os::os_exception_wrapper(void(*)(JavaValue*,methodHandle*,JavaCallArguments*,Thread*),JavaValue*,methodHandle*,JavaCallArguments*,Thread*)+0x18;; __1cCosUos_exception_wrapper6FpFpnJJavaValue_pnMmethodHandle_pnRJavaCallArguments_pnGThread__v2468_v_+0x18
V [libjvm.so+0xb2bf63] void JavaCalls::call(JavaValue*,methodHandle,JavaCallArguments*,Thread*)+0x43;; __1cJJavaCallsEcall6FpnJJavaValue_nMmethodHandle_pnRJavaCallArguments_pnGThread__v_+0x43
V [libjvm.so+0xbb473b] void jni_invoke_static(JNIEnv_*,JavaValue*,_jobject*,JNICallType,_jmethodID*,JNI_ArgumentPusher*,Thread*)+0xa23;; __1cRjni_invoke_static6FpnHJNIEnv__pnJJavaValue_pnI_jobject_nLJNICallType_pnK_jmethodID_pnSJNI_ArgumentPusher_pnGThread__v_+0xa23
V [libjvm.so+0xc06129] jni_CallStaticVoidMethod+0x681;; jni_CallStaticVoidMethod+0x681
C [libjli.so+0x7b20] JavaMain+0x5b0;; JavaMain+0x5b0
C [libc.so.1+0xa8ca7] _thr_setup+0x4e;; _thr_setup+0x4e
C [libc.so.1+0xa8fa0] __moddi3+0x60;; _lwp_start+0x0
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
v ~RuntimeStub::handle_exception_from_callee Runtime1 stub
J java.lang.Class.newInstance0()Ljava/lang/Object;
J vm.mlvm.anonloader.stress.oome.Test.run()Z
J vm.mlvm.share.MlvmTest.runMlvmTest(Ljava/lang/Class;)Z
J vm.mlvm.share.MlvmTest.launch()V
J vm.mlvm.anonloader.stress.oome.Test.main([Ljava/lang/String;)V
v ~StubRoutines::call_stub
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/jprt/T/P1/170135.amurillo/s/src/share/vm/runtime/mutex.cpp:1318), pid=22995, tid=2
# fatal error: acquiring lock Metaspace allocation lock/5 out of order with lock SystemDictionary_lock/4 -- possible deadlock
#
# JRE version: Java(TM) SE Runtime Environment (8.0-b82) (build 1.8.0-ea-fastdebug-b82)
# Java VM: Java HotSpot(TM) Client VM (25.0-b24-internal-201303231701.amurillo.hs25-b24-snapshot-fastdebug compiled mode, sharing solaris-x86 )
# Core dump written. Default location: /export/local/aurora/sandbox/results/ResultDir/oome/core or core.22995
#
# If you would like to submit a bug report, please visit:
# http://bugreport.sun.com/bugreport/crash.jsp
#
Stack: [0xfce9f000,0xfceef000], sp=0xfceecfc0, free space=311k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x159989d] void VMError::report(outputStream*)+0x92d;; __1cHVMErrorGreport6MpnMoutputStream__v_+0x92d
V [libjvm.so+0x159ab26] void VMError::report_and_die()+0x57a;; __1cHVMErrorOreport_and_die6M_v_+0x57a
V [libjvm.so+0x78c4db] void report_fatal(const char*,int,const char*)+0x56f;; __1cMreport_fatal6Fpkci1_v_+0x56f
V [libjvm.so+0x117320d] void Monitor::lock_without_safepoint_check()+0x4fd;; __1cHMonitorbClock_without_safepoint_check6M_v_+0x4fd
V [libjvm.so+0x65196a] void ClassLoaderData::remove_class(Klass*)+0x3a;; __1cPClassLoaderDataMremove_class6MpnFKlass__v_+0x3a
V [libjvm.so+0x1007771] void Klass::remove_unshareable_info()+0x29;; __1cFKlassXremove_unshareable_info6M_v_+0x29
V [libjvm.so+0xa09b17] void InstanceKlass::remove_unshareable_info()+0x17;; __1cNInstanceKlassXremove_unshareable_info6M_v_+0x17
V [libjvm.so+0x1425122] void SystemDictionary::clean_up_shared_class(instanceKlassHandle,Handle,Thread*)+0x1a2;; __1cQSystemDictionaryVclean_up_shared_class6FnTinstanceKlassHandle_nGHandle_pnGThread__v_+0x1a2
V [libjvm.so+0x14211d8] Klass*SystemDictionary::resolve_instance_class_or_null(Symbol*,Handle,Handle,Thread*)+0x10ac;; __1cQSystemDictionarybEresolve_instance_class_or_null6FpnGSymbol_nGHandle_3pnGThread__pnFKlass__+0x10ac
V [libjvm.so+0x141b17e] Klass*SystemDictionary::resolve_or_fail(Symbol*,Handle,Handle,bool,Thread*)+0x29e;; __1cQSystemDictionaryPresolve_or_fail6FpnGSymbol_nGHandle_3bpnGThread__pnFKlass__+0x29e
V [libjvm.so+0x7667c4] Klass*ConstantPool::klass_at_impl(constantPoolHandle,int,Thread*)+0x350;; __1cMConstantPoolNklass_at_impl6FnSconstantPoolHandle_ipnGThread__pnFKlass__+0x350
V [libjvm.so+0x110487a] int Method::fast_exception_handler_bci_for(methodHandle,KlassHandle,int,Thread*)+0x2d2;; __1cGMethodbEfast_exception_handler_bci_for6FnMmethodHandle_nLKlassHandle_ipnGThread__i_+0x2d2
V [libjvm.so+0x13651e1] unsigned char*SharedRuntime::compute_compiled_exc_handler(nmethod*,unsigned char*,Handle&,bool,bool)+0x5a9;; __1cNSharedRuntimebCcompute_compiled_exc_handler6FpnHnmethod_pCrnGHandle_bb_3_+0x5a9
V [libjvm.so+0x52d79f] unsigned char*exception_handler_for_pc_helper(JavaThread*,oopDesc*,unsigned char*,nmethod*&)+0x152b;; __1cbFexception_handler_for_pc_helper6FpnKJavaThread_pnHoopDesc_pCrpnHnmethod__4_+0x152b
V [libjvm.so+0x52de3c] unsigned char*Runtime1::exception_handler_for_pc(JavaThread*)+0x78;; __1cIRuntime1Yexception_handler_for_pc6FpnKJavaThread__pC_+0x78
v ~RuntimeStub::handle_exception_from_callee Runtime1 stub
J java.lang.Class.newInstance0()Ljava/lang/Object;
V [libjvm.so+0xb2d286] void JavaCalls::call_helper(JavaValue*,methodHandle*,JavaCallArguments*,Thread*)+0x12e6;; __1cJJavaCallsLcall_helper6FpnJJavaValue_pnMmethodHandle_pnRJavaCallArguments_pnGThread__v_+0x12e6
V [libjvm.so+0x121d138] void os::os_exception_wrapper(void(*)(JavaValue*,methodHandle*,JavaCallArguments*,Thread*),JavaValue*,methodHandle*,JavaCallArguments*,Thread*)+0x18;; __1cCosUos_exception_wrapper6FpFpnJJavaValue_pnMmethodHandle_pnRJavaCallArguments_pnGThread__v2468_v_+0x18
V [libjvm.so+0xb2bf63] void JavaCalls::call(JavaValue*,methodHandle,JavaCallArguments*,Thread*)+0x43;; __1cJJavaCallsEcall6FpnJJavaValue_nMmethodHandle_pnRJavaCallArguments_pnGThread__v_+0x43
V [libjvm.so+0xbb473b] void jni_invoke_static(JNIEnv_*,JavaValue*,_jobject*,JNICallType,_jmethodID*,JNI_ArgumentPusher*,Thread*)+0xa23;; __1cRjni_invoke_static6FpnHJNIEnv__pnJJavaValue_pnI_jobject_nLJNICallType_pnK_jmethodID_pnSJNI_ArgumentPusher_pnGThread__v_+0xa23
V [libjvm.so+0xc06129] jni_CallStaticVoidMethod+0x681;; jni_CallStaticVoidMethod+0x681
C [libjli.so+0x7b20] JavaMain+0x5b0;; JavaMain+0x5b0
C [libc.so.1+0xa8ca7] _thr_setup+0x4e;; _thr_setup+0x4e
C [libc.so.1+0xa8fa0] __moddi3+0x60;; _lwp_start+0x0
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
v ~RuntimeStub::handle_exception_from_callee Runtime1 stub
J java.lang.Class.newInstance0()Ljava/lang/Object;
J vm.mlvm.anonloader.stress.oome.Test.run()Z
J vm.mlvm.share.MlvmTest.runMlvmTest(Ljava/lang/Class;)Z
J vm.mlvm.share.MlvmTest.launch()V
J vm.mlvm.anonloader.stress.oome.Test.main([Ljava/lang/String;)V
v ~StubRoutines::call_stub
- backported by
-
JDK-8011820 fatal error: acquiring lock Metaspace allocation lock/5 out of order with lock SystemDictionary_lock/4 -- possible deadlock
-
- Closed
-