8010723: fatal error: acquiring lock Metaspace allocation lock/5 out of order

Avoid holding SystemDictionary_lock while calling Klass::remove_unshareable_info

Reviewed-by: coleenp, acorn